メニューボタンを改善

--- a/web_design.html
+++ b/web_design.html
@@ -31,14 +31,42 @@
         <h1 class="name">Katsuya Takahashi</h1>
       </div>
       <div class="button-group">
-        <button class="round-button" data-scroll-to="aboutMe">About Me</button>
-        <button class="round-button" data-scroll-to="history">History</button>
-        <button class="round-button" data-scroll-to="services">Services</button>
-        <button class="round-button" data-scroll-to="Skills">Skills</button>
-        <button class="round-button" data-scroll-to="portfolio">
-          Portfolio
-        </button>
-        <button class="round-button" data-scroll-to="contact">Contact</button>
+        <div class="round-button-container">
+          <button class="round-button front" data-scroll-to="aboutMe">
+            About Me
+          </button>
+          <button class="round-button back" data-scroll-to="aboutMe"></button>
+        </div>
+        <div class="round-button-container">
+          <button class="round-button front" data-scroll-to="history">
+            History
+          </button>
+          <button class="round-button back" data-scroll-to="history"></button>
+        </div>
+        <div class="round-button-container">
+          <button class="round-button front" data-scroll-to="contact">
+            Services
+          </button>
+          <button class="round-button back" data-scroll-to="contact"></button>
+        </div>
+        <div class="round-button-container">
+          <button class="round-button front" data-scroll-to="skills">
+            Skills
+          </button>
+          <button class="round-button back" data-scroll-to="skills"></button>
+        </div>
+        <div class="round-button-container">
+          <button class="round-button front" data-scroll-to="portfolio">
+            Portfolio
+          </button>
+          <button class="round-button back" data-scroll-to="portfolio"></button>
+        </div>
+        <div class="round-button-container">
+          <button class="round-button front" data-scroll-to="contact">
+            Contact
+          </button>
+          <button class="round-button back" data-scroll-to="contact"></button>
+        </div>
       </div>
     </section>
 
@@ -53,11 +81,19 @@
     </section>
     <section id="history">
       <h2>History</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <p></p>
     </section>
     <section id="services">
       <h2>Services</h2>
-      <p>Details about services offered.</p>
+      <p>
+        システム企画補助<br />
+        開発請負（小規模に限る）<br />
+        ホームページ作成<br />
+        ...他<br />
+        <br />
+        注1）副業として土日で対応できる範囲に限ります。<br />
+        注2）個人での対応となりますので、規模や工数に制限があります。
+      </p>
     </section>
     <section id="skills">
       <h2>Skills</h2>
