--- a/index.html
+++ b/index.html
@@ -332,6 +332,16 @@
       >
     </section>
 
-    <script src="script.js"></script>
+    <script src="script.js">
+      (function() {
+        // スマホのユーザーエージェントを判定
+        var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+
+        // スマホならリダイレクト
+        if (isMobile) {
+          window.location.href = "./smartphone/index.html";
+        }
+      })();
+    </script>
   </body>
 </html>
