スマホリダイレクト修正

--- a/index.html
+++ b/index.html
@@ -332,16 +332,6 @@
       >
     </section>
 
-    <script src="script.js">
-      (function() {
-        // スマホのユーザーエージェントを判定
-        var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-
-        // スマホならリダイレクト
-        if (isMobile) {
-          window.location.href = "./smartphone/index.html";
-        }
-      })();
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
