スマホ版微修正

--- a/smartphone/index.html
+++ b/smartphone/index.html
@@ -53,18 +53,19 @@
         ホームページ作成<br />
         ...etc<br />
         <br />
-        注）個人での対応となりますので、規模や工数に制限があります。<br />
+        注）個人での対応となりますので、
+        <br />規模や工数に制限があります。<br />
       </p>
     </section>
     <section id="skills">
       <h2>Skills</h2>
       <table>
         <tr>
-          <th>実務経験あり</th>
+          <th class="skills-th">実務経験あり</th>
           <td>C#,VB.net,HTML,CSS,JavaScript,T-SQL,ストアドプロシージャ</td>
         </tr>
         <tr>
-          <th>学習済</th>
+          <th class="skills-th">学習済</th>
           <td>java,python（機械学習を行うPGを実装）,C</td>
         </tr>
       </table>
